--- a/fiveware-test-web/src/main/webapp/app/components/user/user.html
+++ b/fiveware-test-web/src/main/webapp/app/components/user/user.html
@@ -34,7 +34,19 @@
 					</label>
 				</div>
 			</div>
-
+			
+			
+<div class="form-group">
+  <label class="col-md-4 control-label" for="profile">Perfil</label>
+  <div class="col-md-4">
+    <select id="profile" name="profile" class="form-control" required ng-model="userCtrl.user.profileId">
+      <option value="">Selecione</option>
+      <option value="1">Administrador</option>
+      <option value="2">Usuario</option>
+    </select>
+  </div>
+</div>
+			
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="interests">Interesses</label>
 				<div class="col-md-4">
